syntax = "proto3";

package infrav1beta1;

import "google/api/annotations.proto";

option go_package = "github.com/finiteloopme/paas/infra;infrav1beta1";

enum OperationType{
	option allow_alias = false;
	OP_CREATE = 0;
	OP_UPDATE = 1;
	OP_DELETE = 2;
	OP_DRYRUN = 3;
}

message ProcessFolderRequest {
	string id = 1;
	// Either organisation or folder should be specified.  
	// Not both
	string organisation = 2;
	string folder = 3;
	OperationType operation = 4;
}

message ProcessFolderResponse {}

service InfraResources{
	rpc ProcessFolder(ProcessFolderRequest) returns (ProcessFolderResponse){
		option (google.api.http) = {
			post: "/infra/folder"
		};
	}
}